force-app/main/default/objects/nToolkit__Executor_Log__c/nToolkit__Executor_Log__c.object-meta.xml
<CustomObject>
    <label>Executor Log</label>
    <nameField>
        <displayFormat>EL #{0}-{YYYY}{MM}{DD}</displayFormat>
        <label>#ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executor Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>