force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__Anonymous_Block__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__Anonymous_Block__c</fullName>
    <label>Anonymous Block</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>