force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>