force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__Compiled__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__Compiled__c</fullName>
    <formula>IF(TEXT(nToolkit__Status__c) = &apos;Not Compiled&apos;, IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Failed&apos;),
IF(OR(TEXT(nToolkit__Status__c) = &apos;Compiled and Not Executed&apos;, TEXT(nToolkit__Status__c) = &apos;Executed&apos; ), IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;Successful&apos;), NULL ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compiled</label>
    <type>Text</type>
</CustomField>