force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__CompletedDate__c</fullName>
    <description>Execution finish date</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>