force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__Execution_History__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__Execution_History__c</fullName>
    <label>Execution History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>