force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__Log_Messages__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__Log_Messages__c</fullName>
    <description>messages for compilation and execution success and failure reasons</description>
    <label>Log Messages</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>