force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__Source__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>