force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__Started_From__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__Started_From__c</fullName>
    <label>Started From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>