force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__Status__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Compiled</fullName>
            </value>
            <value>
                <fullName>Compiled and Not Executed</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>