force-app/main/default/objects/nToolkit__Executor_Log__c/fields/nToolkit__Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>nToolkit__Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>