force-app/main/default/objects/nToolkit__Executor_Log__c/listViews/nToolkit__All.listView-meta.xml
<ListView>
    <fullName>nToolkit__All</fullName>
    <columns>NAME</columns>
    <columns>nToolkit__Started_From__c</columns>
    <columns>nToolkit__Class_Name__c</columns>
    <columns>nToolkit__Compiled__c</columns>
    <columns>nToolkit__Executed__c</columns>
    <columns>nToolkit__CompletedDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>