force-app/main/default/objects/nToolkit__Executor_Log__c/listViews/nToolkit__All1.listView-meta.xml
<ListView>
    <fullName>nToolkit__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>